--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "classnames": "^2.2.6",
         "next": "^9.3.1",
+        "primeicons": "^2.0.0",
+        "primereact": "^4.1.2",
         "react": "^16.13.1",
-        "react-dom": "^16.13.1"
+        "react-dom": "^16.13.1",
+        "sass": "^1.26.3"
     }
 }
