--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
         "sass": "^1.26.3"
+    },
+    "devDependencies": {
+        "react-context-devtool": "^1.0.1"
     }
 }
